@@ -4,4 +4,4 @@ AUTOMAKE_OPTIONS = foreign
 
 SUBDIRS = api epplets debian
 
-EXTRA_DIST = autogen.sh epplets.spec epplets.spec.in
+EXTRA_DIST = autogen.sh epplets.spec
