@@ -1,60 +1,0 @@
-%define	name	@PACKAGE@
-%define	ver	@VERSION@
-%define	rel	1
-%define	prefix	@prefix@
-%define	eroot	@EROOT@
-%define	ebin	@EBIN@
-
-Summary: Enlightenment Epplets
-Name: %{name}
-Version: %{ver}
-Release: %{rel}
-Copyright: BSD
-Group: User Interface/X
-URL: http://www.enlightenment.org
-Packager: Michael Jennings <mej@eterm.org>
-Vendor: The Enlightenment Development Team <e-develop@enlightenment.org>
-Source: ftp://ftp.enlightenment.org/enlightenment/epplets/%{name}-%{ver}.tar.gz
-BuildRoot: /var/tmp/%{name}-%{ver}
-Requires: enlightenment >= 0.16.0
-
-%description
-Epplets are small, handy Enlightenment applets, similar to "dockapps"
-or "applets" for other packages.  The epplets package contains the
-base epplet API library and header files, as well as the core set of
-epplets, including CPU monitors, clocks, a mail checker, mixers, a
-slideshow, a URL grabber, a panel-like toolbar, and more.
-
-%prep
-%setup -q
-
-%build
-if [ -z "$GNOME_FRIENDLY" ]; then
-CFLAGS="$RPM_OPT_FLAGS" ./configure --prefix=%{prefix} --enable-fsstd
-else
-CFLAGS="$RPM_OPT_FLAGS" ./configure --prefix=%{prefix} \
-	--disable-autorespawn --enable-fsstd
-fi
-
-make
-
-%install
-make DESTDIR=$RPM_BUILD_ROOT install
-
-%post
-/sbin/ldconfig
-
-%postun
-/sbin/ldconfig
-
-%clean
-rm -rf $RPM_BUILD_ROOT
-
-%files
-%defattr(-,root,root)
-%doc ChangeLog
-%{prefix}/include/*
-%{prefix}/lib/*
-%{ebin}/*
-%{eroot}/epplet_icons/*
-%{eroot}/epplet_data/*
