@@ -172,6 +172,7 @@ main(int argc, char **argv)
 {
    Epplet_Init("E-Power", "0.1", "Enlightenment Laptop Power Epplet",
 	       3, 3, argc, argv, 0);
+   atexit(Epplet_cleanup);
    Epplet_timer(cb_timer, NULL, 30.0, "TIMER");
    b_close = Epplet_create_button(NULL, NULL,
 				  2, 2, 0, 0, "CLOSE", 0, NULL,
