@@ -2240,3 +2240,11 @@ as well as a vertical bar for each.
 
 -------------------------------------------------------------------------------
 
+Sat Oct 13 13:01:05 PDT 2001
+(KainX)
+
+Fixed the spec file, and hopefully fixed E-Power's insane respawning
+habits.
+
+-------------------------------------------------------------------------------
+
